app/assets/stylesheets/layouts/registration.scss
@import url("https://fonts.googleapis.com/css?family=Roboto");
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
/*==========  Mobile First Method  ==========*/

/* Custom, iPhone Retina */
@media only screen and (min-device-width: 320px) and (min-width: 320px) {
  .registration {
    padding: 50px 30px;
    background: #fff;

    h2 {
      color: #ca1e56;
      font-size: 2em;
      line-height: 1.2em;
      font-family: "Roboto";
    }

    a {
      text-decoration: underline;
      color: #ca1e56;
    }

    .links {
      a {
        color: #4c9ad2;
        text-decoration: none;
      }

      a:hover {
        color: #4c9ad2;
        text-decoration: underline;
      }
    }

    > section {
      flex-direction: column;
    }

    > aside {
      width: 100%;
    }

    .google-oath {
      margin-bottom: 2rem;
      display: flex;
      align-items: center;

      hr.grey-border {
        border-radius: 5px;
        height: 2px;
        background-color: #eee;
        border: none;
        margin: 0 1rem;
        width: 50%;
      }

      p.alt-text {
        margin-right: 2rem;
        font-style: italic;
        color: #555;
      }

      a {
        text-decoration: none !important;
        color: transparent;
      }

      #signgoogle {
        height: 50px;
        width: 240px;
        background-color: #4285f4;
        border: none;
        color: #fff;
        cursor: pointer;
        text-align: center;
        vertical-align: middle;
        transition: background-color 0.218s, border-color 0.218s,
          box-shadow 0.218s;

        &:hover {
          -webkit-box-shadow: 0 0 3px 3px rgba(66, 133, 244, 0.3);
          box-shadow: 0 0 3px 3px rgba(66, 133, 244, 0.3);
        }

        .wrapper {
          height: 100%;
          border: 1px solid transparent;

          .icon {
            padding: 15px;
            background-color: #fff;
            border-radius: 1px;
            float: left;

            .icon-svg {
              width: 18px;
              height: 18px;
            }
          }

          .message {
            font-size: 16px;
            line-height: 48px;
            font-weight: 500;
            letter-spacing: 0.21px;
            margin-left: 6px;
            margin-right: 6px;
            vertical-align: top;
            text-decoration: none !important;
          }
        }
      }
    }

    // All pages that use forms in registration
    &.signup,
    &.signin,
    &.change-email-password,
    &.edit-account,
    &.forgot-password,
    &.update-profile-picture,
    &.resend-confirmation,
    &.resend-unlock {
      section {
        &.signup-form {
          width: 100%;
          padding: 0;

          h2 {
            &.heading {
              margin-bottom: 3rem;
            }
          }

          .status {
            display: flex;
            flex-direction: row;
            margin: 20px 0px;
            width: 100%;

            ul {
              display: flex;
              list-style-type: none;
            }
            li {
              width: auto;
              margin-right: 20px;
            }
          }
        }
        &.rhs-image {
          display: none;
        }
      }
    }

    &.single-col {
      &.toc section,
      &.edit-account section,
      &.change-email-password section,
      &.manage-account section &.forgot-password section {
        flex-direction: column;
      }

      &.manage-account section article {
        padding: 2em 2em;
      }

      &.edit-account section article {
        padding-bottom: 2em;
      }

      &.toc section {
        article {
          padding: 0;

          .eyebrow {
            color: #ca1e56;
            font-family: "Roboto";
            font-style: normal;
            font-weight: bold;
            font-size: 18px;
            line-height: 20px;
            margin-bottom: 1rem;
          }

          h2 {
            &.heading {
              color: #24282b;
              font-family: "Roboto";
              font-weight: bold;
              margin-bottom: 2rem;
            }
          }

          h3 {
            margin-bottom: 1em;
            margin-top: 2em;
            color: #24282b;
            font-family: "Roboto";
            font-weight: bold;
          }

          p:not(:first-of-type) {
            margin: 0.5em 0;
          }
          ul li::before {
            content: "\2022";
            color: #ca1e56;
            font-weight: bold;
            display: inline-block;
            width: 1em;
            margin-left: 0;
          }

          .actions {
            display: flex;
            margin-top: 1em;
            margin-bottom: 1em;

            input {
              margin: 5px 0px;
              border-radius: 5px;
              display: inline-block;
              cursor: pointer;
              padding: 10px 20px;
              font-family: Open Sans;
              font-size: 1rem;
              text-align: left;
              background-color: #ca1e56;
              border: 1px solid #ca1e56;
              color: #fff;
            }
          }
        }
      }
    }
  }

  .new_user {
    width: 90%;

    .actions {
      display: flex;
      margin-top: 1em;
      margin-bottom: 1em;

      input {
        margin: 5px 0px;
        border-radius: 5px;
        display: inline-block;
        cursor: pointer;
        padding: 10px 20px;
        font-family: Open Sans;
        font-size: 1rem;
        text-align: left;
        background-color: #ca1e56;
        border: 1px solid #ca1e56;
        color: #fff;
      }
    }

    .field > div.field_with_errors > input {
      padding-left: 1em;
      font-size: 1em;
      padding: 0.5em;
      display: flex;
      width: 100%;
      border: 1px solid #c00;
    }
  }
}
/* ... */

